force-app/main/default/objects/SMS_VNPT__mdt/SMS_VNPT__mdt.object-meta.xml
<CustomObject>
    <label>SMS VNPT BrandName</label>
    <pluralLabel>SMS VNPT BrandName</pluralLabel>
</CustomObject>