force-app/main/default/objects/SMS_VNPT__mdt/fields/AGENTID__c.field-meta.xml
<CustomField>
    <fullName>AGENTID__c</fullName>
    <label>AGENT ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>