force-app/main/default/objects/SMS_VNPT__mdt/fields/APIPASS__c.field-meta.xml
<CustomField>
    <fullName>APIPASS__c</fullName>
    <label>API PASS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>