force-app/main/default/objects/SMS_VNPT__mdt/fields/APIUSER__c.field-meta.xml
<CustomField>
    <fullName>APIUSER__c</fullName>
    <label>API User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>