force-app/main/default/objects/SMS_VNPT__mdt/fields/CONTRACTID__c.field-meta.xml
<CustomField>
    <fullName>CONTRACTID__c</fullName>
    <label>CONTRACT ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>