force-app/main/default/objects/SMS_VNPT__mdt/fields/DATA_CODING_NONUTF__c.field-meta.xml
<CustomField>
    <fullName>DATA_CODING_NONUTF__c</fullName>
    <label>DATA CODING NONUTF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>