force-app/main/default/objects/SMS_VNPT__mdt/fields/DATACODINGUTF__c.field-meta.xml
<CustomField>
    <fullName>DATACODINGUTF__c</fullName>
    <label>DATA CODING UTF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>