force-app/main/default/objects/SMS_VNPT__mdt/fields/ISTELCOSUB__c.field-meta.xml
<CustomField>
    <fullName>ISTELCOSUB__c</fullName>
    <label>ISTELCOSUB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>